--- a/task4/client/pom.xml
+++ b/task4/client/pom.xml
@@ -12,32 +12,6 @@
             <version>0.0.1</version>
             <scope>compile</scope>
     </dependency>
-<!--
-    <dependency>
-            <groupId>lifeco-rest</groupId>
-            <artifactId>broker</artifactId>
-            <version>0.0.1</version>
-            
-    </dependency>
-
-    <dependency>
-            <groupId>lifeco-rest</groupId>
-            <artifactId>auldfellas</artifactId>
-            <version>0.0.1</version>
-    </dependency>
-    <dependency>
-            <groupId>quoco-rmi</groupId>
-            <artifactId>dodgygeezers</artifactId>
-            <version>0.0.1</version>
-    </dependency>
-
-    <dependency>
-            <groupId>quoco-rmi</groupId>
-            <artifactId>girlsallowed</artifactId>
-            <version>0.0.1</version>
-    </dependency>
-    -->
-
     <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
@@ -48,12 +22,19 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.17.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.2</version> <!-- Ensure this version matches your jackson-databind version -->
+        </dependency>
 
-     <dependency>
+
+        <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <version>4.12</version>
     </dependency>
+
 
 
     </dependencies>
@@ -74,7 +55,6 @@
                 <version>1.6.0</version>
                 <configuration>
                    <mainClass>${main.class}</mainClass>
-                 <!-- <mainClass>Main</mainClass> -->
                 </configuration>
             </plugin>
         </plugins>
