--- a/task4/girlsallowed/pom.xml
+++ b/task4/girlsallowed/pom.xml
@@ -58,9 +58,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <skipTests>false</skipTests>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <skipTests>false</skipTests>-->
+<!--                </configuration>-->
             </plugin>
 
         </plugins>
