--- a/task/booking/pom.xml
+++ b/task/booking/pom.xml
@@ -94,6 +94,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Use the latest version -->
+        </dependency>
 
         <!-- Spring Boot Test starter for testing (MockMvc, JUnit support, etc.) -->
         <dependency>
