--- a/task/checking/pom.xml
+++ b/task/checking/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Use the latest version -->
+        </dependency>
+
         <!-- Spring Boot Test starter for testing (MockMvc, JUnit support, etc.) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -95,6 +101,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
     <!-- Build section -->
     <build>
