--- a/task/pom.xml
+++ b/task/pom.xml
@@ -8,8 +8,8 @@
     <modules>
         <module>core</module>
         <module>checking</module>
-        <module>dodgygeezers</module>
-        <module>girlsallowed</module>
+        <module>booking</module>
+        <module>cancel</module>
         <module>broker</module>
         <module>client</module>
     </modules>
